What's New

[B]2.0.0[/B]
— Brand new Aktualne TV addon!
— Simplified, just videos
— No dependency on other modules
— FullHD 1080p and adaptive streaming now supported
— Only H264, no VP8 support anymore
— Slovak interface translation